--- a/man/icewm.pod
+++ b/man/icewm.pod
@@ -977,20 +977,21 @@ then C<MouseWinRaise> takes preference over C<MouseWinLower>.
 
 =back
 
-Clicking on the desktop activates a menu.  The middle button shows the
-window list (C<DesktopWinListButton=2>).  The right button shows the
-root menu (C<DesktopMenuButton=3>).
-
 The title frame of a window also listens for mouse clicks.  Left double
 clicking maximizes the window (C<TitleBarMaximizeButton=1>).  Middle
 double clicking rolls up the window (C<TitleBarRollupButton=2>).
-Pressing a mouse button and moving it will move the window.  C<Alt+left>
-button lowers the window.
+Pressing a mouse button and moving it will move the window.
+C<Alt+Pointer_Button1> lowers the window.
 
 When the mouse is on the window frame then a left click raises the
 window.  Dragging with the left button down resizes the window.
 Clicking the right button pops up the context menu.  Dragging with the
 right button moves the window.
+
+Clicking on the desktop activates a menu.  The middle button shows the
+window list (C<DesktopWinListButton=2>).  The right button shows the
+root menu (C<DesktopMenuButton=3>). If you press C<Ctrl+Alt> then
+the mouse wheel will focus all applications in turn.
 
 =head1 SIGNALS
 
